Grok changes
************

1.1 (unreleased)
================

* The ``grok.permissions()``, that is used in the ``grok.Role`` component now
  accepts references to ``grok.Permission`` class, not just permission ids.
  This behaviour is now symetrical to the ``grok.require()`` directive.

* Added an util function, ``create_application``, to create an
  application and trigger the correct events during the process.

* Grok now provides an application-centric event to complete the
  zope.lifecycle ones. This event, ``ApplicationInitializedEvent``, is
  destined to be trigged after the application has been added to a
  container. At this particular step, the application is considered
  safe for additional content to be created.

* Use grokcore.site and grokcore.annotation instead of builtins
  implementations.

* Update the reference to mention ``zope.View``.

* Update the reference to mention direct references to permissions in
  ``grok.require`` and ``grok.permissions`` in ``grok.Role``.

* Fix documentation bug where virtualenv wasn't explained correctly.

* Remove the ``grok.View`` permission declaration in ``etc/site.zcml.in``, 
  should have gone in 1.0b2 already

1.0 (2009-10-07)
================

* Removed IReRaiseException adapter registration for IUnauthorized again in
  favor of using grokcore.startup's configurable``debug_application_factory``
  WSGI application factory function.

* Use newer versions of simplejson and pytz.

  See also https://bugs.launchpad.net/grok/+bug/432115

1.0b2 (2009-09-17)
==================

See: `upgrade_notes_1.0b2` for special notes on upgrading to this release.

* Revert back to an older version of ``grokui.admin`` that has not seen any
  changes related to the ``grok.View`` permission and the
  ``View``/``CodeView`` split and still has the introspector that is removed
  from newer versions.

* ``grokcore.view``, ``grokcore.viewlet`` and ``grokcore.formlib`` and